# guile-udev

./: .dir-locals.el  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  configure.ac  guix.scm  pre-inst-env.in
.github/workflows/: guile2.2.yml  guile3.0.yml  guix.yml
am/: Makefile.am
build-aux/: guild
build-aux/am/: Makefile.am  guile.am
doc/: .gitignore  Makefile.am  guile-udev.texi  indices.texi
examples/: device-listener.scm
libguile-udev/: Makefile.am  common.c  common.h  error.c  error.h  udev-device-func.c  udev-device-func.h  udev-device-main.c  udev-device-type.c  udev-device-type.h  udev-func.c  udev-func.h  udev-hwdb-func.c  udev-hwdb-func.h  udev-hwdb-main.c  udev-hwdb-type.c  udev-hwdb-type.h  udev-main.c  udev-monitor-func.c  udev-monitor-func.h  udev-monitor-main.c  udev-monitor-type.c  udev-monitor-type.h  udev-type.c  udev-type.h
m4/: .gitignore
modules/: Makefile.am
modules/udev/: Makefile.am  device.scm  hwdb.scm  monitor.scm  udev.scm
tests/: .gitignore  Makefile.am  monitor.scm
